--- a/NewsPortal/templates/new.html
+++ b/NewsPortal/templates/new.html
@@ -1,10 +1,16 @@
 {% extends 'default.html' %}
 
+{% load custom_filters %}
+
 {% block title %}
 Новость или статья
 {% endblock title %}
 
 {% block content %}
-<h1>Новости и статьи</h1>
-{{ post }}
+    {% if post %}
+        <h1>{{post.header | censor}}</h1>
+        <h5>Дата публикации: {{post.time_of_publication|date:'d M Y'}}</h5>
+        <hr>
+        {{post.text | censor}}
+    {% endif %}
 {% endblock content %}
