--- a/NewsPortal/templates/about.html
+++ b/NewsPortal/templates/about.html
@@ -7,3 +7,12 @@
 {% block content %}
     <h1>{{ flatpage.content }}</h1>
 {% endblock content %}
+
+
+{# Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе #}
+    <form action="" method="get">
+        {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+        {{ filterset.form.as_p }}
+        {# Добавим кнопку отправки данных формы #}
+        <input type="submit" value="Найти" />
+    </form>
