--- a/NewsPortal/templates/default.html
+++ b/NewsPortal/templates/default.html
@@ -37,6 +37,12 @@
                    <a class="nav-link" href="/news/">News</a>
                </li>
                <li class="nav-item">
+                   <a class="nav-link" href="/news/search/">Search</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" href="/news/create/">Create</a>
+               </li>
+               <li class="nav-item">
                    <a class="nav-link" href="/about/">About</a>
                </li>
            </ul>
