--- a/NewsPortal/templates/search.html
+++ b/NewsPortal/templates/search.html
@@ -3,12 +3,18 @@
 {% load custom_filters %}
 
 {% block title %}
-Новости и статьи
+Поиск
 {% endblock title %}
 
 {% block content %}
-    <h1>Все новости и статьи</h1>
+    <h1>Поиск</h1>
         <h5>Количество статей и новостей: {{posts|length}}</h5>
+        <form action="" method="get">
+            {# Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями #}
+            {{ filterset.form.as_p }}
+            {# Добавим кнопку отправки данных формы #}
+            <input type="submit" value="Найти" />
+        </form>
         <hr>
         {% if posts %}
             <table>
